--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,9 +12,10 @@
         android:orientation="vertical">
 
         <FrameLayout
+            android:id="@+id/fra_main"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/md_blue_100"/>
+            android:background="@color/md_blue_100" />
 
         <GridView
             android:id="@+id/gdv_menu"
