--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -8,6 +8,10 @@
     <dimen name="fab_margin">16dp</dimen>
 
     <dimen name="layout_padding_15">15dp</dimen>
-
     <dimen name="title_size_16">16sp</dimen>
+
+
+    <dimen name="layout_padding_30">30dp</dimen>
+    <dimen name="layout_padding_50">50dp</dimen>
+    <dimen name="layout_padding_65">65dp</dimen>
 </resources>
