--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -10,6 +10,8 @@
     <dimen name="title_size_16">16sp</dimen>
     <dimen name="title_size_20">20sp</dimen>
 
+    <dimen name="layout_padding_5">5dp</dimen>
+    <dimen name="layout_padding_10">10dp</dimen>
     <dimen name="layout_padding_15">15dp</dimen>
     <dimen name="layout_padding_30">30dp</dimen>
     <dimen name="layout_padding_50">50dp</dimen>
