--- a/app/src/main/res/layout/activity_ngu_van.xml
+++ b/app/src/main/res/layout/activity_ngu_van.xml
@@ -9,23 +9,14 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:orientation="vertical">
 
         <FrameLayout
+            android:id="@+id/fra_nguvan"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@color/md_blue_100"/>
-
-        <GridView
-            android:id="@+id/gdv_nguvan"
-            android:numColumns="2"
-            android:paddingTop="100dp"
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
-            android:stretchMode="columnWidth"
-            android:columnWidth="150dp" />
-
+            android:layout_height="match_parent"
+            android:background="@color/bg_white"/>
     </LinearLayout>
 
     <FrameLayout
@@ -41,13 +32,6 @@
             android:elevation="4dp"
             app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
             app:theme="@style/ToolbarTheme" />
-
-        <TextView
-            android:id="@+id/textView_nguvan"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:textAppearance="@style/TextAppearance.AppCompat.Display1" />
     </FrameLayout>
 
     <android.support.design.widget.NavigationView
