--- a/app/src/main/res/layout/item_list_view.xml
+++ b/app/src/main/res/layout/item_list_view.xml
@@ -4,11 +4,13 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:id ="@+id/linear_detail"
     android:background="@color/md_blue_light_50"
     android:paddingTop="@dimen/layout_padding_55"
     android:paddingLeft="@dimen/layout_padding_10"
     android:paddingRight="@dimen/layout_padding_10">
     <ListView
+        android:nestedScrollingEnabled="true"
         android:id="@+id/lst_list_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
