--- a/app/src/main/res/layout/activity_show_dethi.xml
+++ b/app/src/main/res/layout/activity_show_dethi.xml
@@ -2,24 +2,24 @@
 <android.support.v4.widget.DrawerLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/navigation_drawer_layout_hoahoc"
+    android:id="@+id/navigation_drawer_layout_dethi"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="@bool/fitsSystemWindows">
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
         <FrameLayout
+            android:id="@+id/fra_dethi"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/md_blue_100"/>
+            android:background="@color/md_blue_100" />
 
         <GridView
-            android:id="@+id/gdv_hoahoc"
-            android:numColumns="2"
+            android:id="@+id/gdv_menu_dethi"
+            android:numColumns="3"
             android:paddingTop="100dp"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
@@ -34,24 +34,17 @@
         android:layout_marginTop="@dimen/status_bar_height">
 
         <android.support.v7.widget.Toolbar
-            android:id="@+id/toolbar_hoahoc"
+            android:id="@+id/toolbar_dethi"
             android:layout_width="match_parent"
             android:layout_height="?actionBarSize"
             android:background="@color/md_blue_100"
             android:elevation="4dp"
             app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
             app:theme="@style/ToolbarTheme" />
-
-        <TextView
-            android:id="@+id/textView_hoahoc"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:textAppearance="@style/TextAppearance.AppCompat.Display1" />
-    </FrameLayout>
+  </FrameLayout>
 
     <android.support.design.widget.NavigationView
-        android:id="@+id/navigation_view_hoahoc"
+        android:id="@+id/navigation_view_dethi"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_gravity="start"
