--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -9,13 +9,17 @@
 
     <dimen name="title_size_16">16sp</dimen>
     <dimen name="title_size_20">20sp</dimen>
+    <dimen name="title_size_25">25sp</dimen>
 
     <dimen name="layout_padding_5">5dp</dimen>
     <dimen name="layout_padding_10">10dp</dimen>
     <dimen name="layout_padding_15">15dp</dimen>
     <dimen name="layout_padding_30">30dp</dimen>
+    <dimen name="layout_padding_40">40dp</dimen>
     <dimen name="layout_padding_50">50dp</dimen>
     <dimen name="layout_padding_55">55dp</dimen>
     <dimen name="layout_padding_65">65dp</dimen>
+    <dimen name="layout_padding_80">80dp</dimen>
+    <dimen name="layout_padding_100">100dp</dimen>
     <dimen name="layout_padding_300">300dp</dimen>
 </resources>
