--- a/app/src/main/res/layout/navigation_drawer_header.xml
+++ b/app/src/main/res/layout/navigation_drawer_header.xml
@@ -9,7 +9,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:scaleType="centerCrop"
-        android:background="@drawable/backgroud" />
+        android:background="@drawable/thptleft" />
 
     <LinearLayout
         android:layout_width="match_parent"
