--- a/app/src/main/res/layout/item_detail_baihoc.xml
+++ b/app/src/main/res/layout/item_detail_baihoc.xml
@@ -31,7 +31,7 @@
     <io.github.kexanie.library.MathView
         android:id="@+id/mathview"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         auto:engine="MathJax">
     </io.github.kexanie.library.MathView>
 
