--- a/app/src/main/res/layout/item_show_detail_cauhoi_dethi.xml
+++ b/app/src/main/res/layout/item_show_detail_cauhoi_dethi.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:auto="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -33,6 +33,13 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textSize="@dimen/title_size_20"/>
+
+    <io.github.kexanie.library.MathView
+        android:id="@+id/mathview_dethi"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        auto:engine="MathJax">
+    </io.github.kexanie.library.MathView>
 
     <RadioGroup
         android:id="@+id/group_rad_dapan"
