--- a/app/src/main/res/layout/item_show_detail_cauhoi_dethi.xml
+++ b/app/src/main/res/layout/item_show_detail_cauhoi_dethi.xml
@@ -45,7 +45,8 @@
         android:id="@+id/group_rad_dapan"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingLeft="@dimen/layout_padding_5">
+        android:paddingLeft="@dimen/layout_padding_5"
+        android:visibility="gone">
         <RadioButton
             android:id="@+id/rad_dapan_a"
             android:layout_width="match_parent"
@@ -71,17 +72,45 @@
             android:text="@string/dap_an_d"/>
     </RadioGroup>
 
-    <LinearLayout
-        android:id="@+id/linear_show_button"
+    <ScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_weight="0.9">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/txt_noidung_dapan"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textSize="@dimen/title_size_20"
+                android:visibility="gone"/>
+
+            <io.github.kexanie.library.MathView
+                android:id="@+id/mathview_dapan"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                auto:engine="MathJax">
+            </io.github.kexanie.library.MathView>
+
+        </LinearLayout>
+    </ScrollView>
+
+    <LinearLayout
+        android:id="@+id/linear_show_button_tracnghiem"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:paddingTop="@dimen/layout_padding_10"
         android:gravity="center"
         android:orientation="horizontal">
         <Button
             android:id="@+id/btn_back"
             android:layout_width="@dimen/layout_padding_100"
             android:layout_height="wrap_content"
-            android:background="@color/md_blue_500"
+            android:layout_weight="0.5"
+            android:background="@color/md_blue_100"
             android:textColor="@color/bg_white"
             android:textStyle="bold"
             android:text="@string/btn_back"/>
@@ -90,17 +119,25 @@
             android:id="@+id/btn_next"
             android:layout_width="@dimen/layout_padding_100"
             android:layout_height="wrap_content"
+            android:layout_weight="0.5"
             android:background="@color/md_blue_700"
             android:textColor="@color/bg_white"
             android:textStyle="bold"
             android:paddingLeft="@dimen/layout_padding_10"
             android:text="@string/btn_next"/>
-
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:paddingTop="@dimen/layout_padding_5"
+        android:orientation="horizontal">
         <Button
             android:id="@+id/btn_check"
             android:layout_width="@dimen/layout_padding_100"
             android:layout_height="wrap_content"
-            android:background="@color/md_blue_700"
+            android:layout_weight="1"
+            android:background="@color/md_blue_100"
             android:paddingLeft="@dimen/layout_padding_5"
             android:textColor="@color/bg_white"
             android:textStyle="bold"
