--- a/app/src/main/res/layout/item_detail_baihoc.xml
+++ b/app/src/main/res/layout/item_detail_baihoc.xml
@@ -4,6 +4,8 @@
     android:layout_height="match_parent"
     xmlns:auto="http://schemas.android.com/apk/res-auto"
     android:layout_gravity="center"
+    android:paddingLeft="@dimen/layout_padding_10"
+    android:paddingRight="@dimen/layout_padding_10"
     android:orientation="vertical">
 
     <TextView
@@ -18,20 +20,20 @@
         android:textColor="@color/md_red"
         android:text="abcdef"/>
 
-    <TextView
+    <com.thud.thpt_dh.customcontrols.TextViewEx
         android:id="@+id/text_view_noidung_monhoc"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:layout_marginLeft="@dimen/layout_padding_10"
-        android:layout_gravity="center_vertical"
-        android:gravity="center_vertical"
+        android:layout_gravity="right"
         android:textSize="@dimen/title_size_20"/>
 
     <io.github.kexanie.library.MathView
         android:id="@+id/mathview"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
         auto:engine="MathJax">
     </io.github.kexanie.library.MathView>
 
