--- a/app/src/main/res/layout/item_monhoc.xml
+++ b/app/src/main/res/layout/item_monhoc.xml
@@ -4,8 +4,8 @@
     android:gravity="center_vertical"
     android:orientation="horizontal"
     android:layout_width="match_parent"
-    android:layout_height="@dimen/layout_padding_50"
-    android:background="@color/bg_white"
+    android:layout_height="@dimen/layout_padding_65"
+    android:background="@drawable/custom_border"
     android:focusable="false">
 
     <TextView
@@ -16,5 +16,7 @@
         android:layout_marginLeft="@dimen/layout_padding_15"
         android:layout_gravity="center_vertical"
         android:gravity="center_vertical"
+        android:textColor="@color/md_white"
+        android:textStyle="bold"
         android:textSize="@dimen/title_size_20"/>
 </LinearLayout>
