--- a/app/src/main/res/layout/item_info_dethithu.xml
+++ b/app/src/main/res/layout/item_info_dethithu.xml
@@ -97,4 +97,32 @@
         android:textColor="@color/bg_white"
         android:textStyle="bold"
         android:text="@string/start"/>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:paddingTop="@dimen/layout_padding_10"
+        android:gravity="center"
+        android:orientation="horizontal">
+        <Button
+            android:id="@+id/btn_view_pdf_dethi"
+            android:layout_width="@dimen/layout_padding_100"
+            android:layout_height="@dimen/layout_padding_50"
+            android:layout_marginTop="@dimen/layout_padding_10"
+            android:layout_marginRight="@dimen/layout_padding_10"
+            android:background="@color/md_blue_700"
+            android:textColor="@color/bg_white"
+            android:textStyle="bold"
+            android:text="@string/btn_view_pdf"/>
+
+        <Button
+            android:id="@+id/btn_close_info_dethi"
+            android:layout_width="@dimen/layout_padding_100"
+            android:layout_height="@dimen/layout_padding_50"
+            android:layout_marginTop="@dimen/layout_padding_10"
+            android:background="@color/md_blue_700"
+            android:textColor="@color/bg_white"
+            android:textStyle="bold"
+            android:text="@string/btn_close"/>
+    </LinearLayout>
 </LinearLayout>
